--- a/react-components/index.html
+++ b/react-components/index.html
@@ -7,7 +7,7 @@
     <title>React-Components</title>
   </head>
   <body>
-    <div id="app"><!--ssr-outlet--></div>
+    <div id="root"><!--ssr-inject--></div>
     <script type="module" src="/src/entry-client.tsx"></script>
   </body>
 </html>
